# dezbot

./: .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: build.yml
dezbot/: __main__.py  bot.py  log.py
dezbot/cogs/commands/: admin.py
tests/: test_dezbot.py
